[package]
name = "time-fly"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"


[dependencies]
anyhow = "1.0.98"
bevy = { version = "0.15.0" }
time = { version = "0.3.36", features = [
    "formatting",
    "local-offset",
    "macros",
] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
